<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ProductRecordActivity">

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="86dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/edit"
        app:layout_constraintStart_toEndOf="@+id/imgBtnSnapshot"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="86dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/close"
        app:layout_constraintStart_toEndOf="@+id/imgBtnSnapshot"
        app:layout_constraintTop_toBottomOf="@+id/btnEdit" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="86dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="108dp"
        android:text="@string/delete_record"
        app:layout_constraintStart_toEndOf="@+id/imgBtnSnapshot"
        app:layout_constraintTop_toBottomOf="@+id/btnClose" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="144dp"
        android:layout_height="21dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/product_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBtnSnapshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:scaleType="fitCenter"
        android:src="@drawable/title_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="82dp"
        android:layout_height="@dimen/textview_height"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/product_barcode"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnSnapshot" />

    <TextView
        android:id="@+id/txtBarcode"
        android:layout_width="273dp"
        android:layout_height="35dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnSnapshot" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="273dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/txtBarcode" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="81dp"
        android:layout_height="27dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="138dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        tools:layout_editor_absoluteX="97dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/txtCost"
        android:layout_width="138dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />


    <ImageButton
        android:id="@+id/imgBtnShow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/eye_24"
        app:layout_constraintStart_toEndOf="@+id/txtCost"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</android.support.constraint.ConstraintLayout>